--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "weather-cli-a",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "description": "CLI for getting weather",
     "main": "weather.js",
     "bin": {
@@ -30,6 +30,7 @@
     "dependencies": {
         "axios": "^0.24.0",
         "chalk": "^4.1.2",
-        "dedent-js": "^1.0.1"
+        "dedent-js": "^1.0.1",
+        "weather-cli-a": "^1.1.2"
     }
 }
